--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -93,8 +93,8 @@ import Popover from "../components/Popover.astro";
     .menu a {
       display: block;
       padding: 10px;
-      /* color: var(--color-secondary02);
-    font-size: var(--font_size_medium); */
+      color: var(--color-secondary2);
+      /* font-size: var(--font_size_medium); */
       text-decoration: none;
       transition: color 0.3s;
       text-align: end;
@@ -116,7 +116,7 @@ import Popover from "../components/Popover.astro";
     .burger .line {
       width: 100%;
       height: 2px;
-      /* background-color: var(--color_white); */
+      background: var(--color-secondary2);
       margin-bottom: 5px;
       transition: 0.2s linear;
     }
@@ -157,7 +157,7 @@ import Popover from "../components/Popover.astro";
 
       nav.active .menu {
         display: block;
-        /* background-color: var(--color_black); */
+        background: var(--color-primary3);
         position: absolute;
         top: 0px;
         left: 0;
