--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -10,6 +10,7 @@ const { style } = Astro.props;
       padding: 0 19px;
       border-radius: 20px;
       align-self: start;
+      justify-self: start;
     }
     .primary {
       background: var(--color-primary2);
