--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -44,10 +44,10 @@ const employeeData = await fetch("https://raw.githubusercontent.com/espi0001/fro
   </section>
 
   <section class="core">
-    <Tag style="secondary">Growing with our Clients</Tag>
+    <!-- <Tag style="secondary">Growing with our Clients</Tag> -->
     <!-- 
     <Overskrift farve="secondary" linket="#" buttonProps={{ style: "secondary" }} h2="Our core values & principles" tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps.">Get in touch</Overskrift> -->
-    <CorevaluesSection data={corevalueData} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }} />
+    <CorevaluesSection data={corevalueData} tagProps={{ style: "secondary" }} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }}>Growing with our Clients</CorevaluesSection>
   </section>
 
   <section class="team">
