--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@
 
       padding-top: 46px;
       padding-bottom: 46px;
-      padding-inline: 360px;
+      /* padding-inline: 360px; */
     }
 
     .content {
