--- a/src/components/EmployeeCard.astro
+++ b/src/components/EmployeeCard.astro
@@ -4,12 +4,13 @@ import { Image } from "astro:assets";
 import { Icon } from "astro-icon/components";
 
 const { employee } = Astro.props;
-const { img, name, title, description } = employee;
+const { img, name, title, description, slug, social_links } = employee;
 
 const images = import.meta.glob<{ default: ImageMetadata }>("/src/assets/images/*.{jpeg,jpg,png,gif}");
 if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/assets/images/*.{jpeg,jpg,png,gif}"`);
 ---
 
+<!-- 
 <article>
   <Image src={images[img]()} alt={name} />
   <h5>{name}</h5>
@@ -19,10 +20,83 @@ if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/assets/
     <Icon name="twitter" />
     <Icon name="facebook" />
   </div>
+</article> -->
+<article>
+  <a class="card-wrapper" href={`/${slug}`}>
+    <div class="image-title">
+      <Image src={images[img]()} alt={name} width={100} />
+      <p class="employees-title">{title}</p>
+    </div>
+  </a>
+  <div class="text">
+    <h5 class="employees-name">{name}</h5>
+    <p class="employees-content">{description}</p>
+  </div>
+  <div class="employee-icon">
+    {
+      social_links.instagram && (
+        <a href={social_links.instagram} aria-label="Instagram">
+          <Icon name="instagram" />
+        </a>
+      )
+    }
+    {
+      social_links.facebook && (
+        <a href={social_links.facebook} aria-label="Facebook">
+          <Icon name="facebook" />
+        </a>
+      )
+    }
+    {
+      social_links.twitter && (
+        <a href={social_links.twitter} aria-label="Twitter">
+          <Icon name="twitter" />
+        </a>
+      )
+    }
+  </div>
 </article>
 
 <style>
   @layer components {
+    article {
+      display: grid;
+      gap: 25px;
+      .card-wrapper {
+        .image-title {
+          position: relative;
+          img {
+            border-radius: 20px;
+          }
+        }
+      }
+      &:first-child .employees-title {
+        background: var(--primary-color);
+        color: var(--tertiary-color);
+      }
+      .employees-title {
+        padding: 4px 20px;
+        position: absolute;
+        background: var(--tertiary-color);
+        border-radius: 100px;
+        bottom: 20px;
+        right: 20px;
+        color: var(--white-color);
+      }
+      .text {
+        text-align: center;
+        display: grid;
+        gap: 8px;
+      }
+      .employee-icon {
+        display: flex;
+        gap: 2rem;
+        margin: 0 auto;
+        svg {
+          width: 24px;
+        }
+      }
+    }
     article {
       color: var(--color-primary3);
       text-align: center;
