--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -97,7 +97,7 @@ if (!images[img]) {
           content: "";
           height: 200px;
           width: 200px;
-          background-color: var(--color-secondary1);
+          background: var(--color-secondary1);
           z-index: -1;
           left: -30px;
           top: -30px;
@@ -135,7 +135,7 @@ if (!images[img]) {
           grid-template-columns: 1fr 1fr;
           .icons {
             text-decoration: none;
-            color: var(--heading-color);
+            color: var(--color-primary3);
             align-self: flex-start;
             border-left: 1px solid var(--body-text);
             display: flex;
