--- a/src/components/AndenSection.astro
+++ b/src/components/AndenSection.astro
@@ -30,6 +30,7 @@ const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
 <style>
   @layer components {
     .anden-section {
+      grid-column: content;
       display: grid;
       grid-template-columns: 1fr 1fr;
       justify-content: center;
