--- a/src/components/Animation.astro
+++ b/src/components/Animation.astro
@@ -52,6 +52,7 @@ import Tag from "./Tag.astro";
 <style>
   @layer components {
     .experience-section {
+      grid-column: content;
       display: grid;
       grid-template-columns: 1fr 2fr;
       background: var(--color-primary1);
