--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -58,3 +58,30 @@ const { title = "opgave" } = Astro.props;
     <script></script>
   </body>
 </html>
+
+<style>
+  main {
+    --gap: clamp(1rem, 6vw, 3rem);
+    --full: minmax(var(--gap), 1fr);
+    --content: min(75rem, 100% - var(--gap) * 2);
+
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns:
+      [full-start] var(--full)
+      [content-start] var(--content) [content-end]
+      var(--full) [full-end];
+
+    > * {
+      grid-column: content;
+    }
+    .full {
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-column: full;
+      > * {
+        grid-column: content;
+      }
+    }
+  }
+</style>
