--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,9 @@
 @import url("./reset.css") layer(reset);
 @import url("./overrides.css") layer(overrides);
 
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 @layer global {
   :root {
     --step-0: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
@@ -23,7 +26,7 @@
     --color-faq: #dadada;
     --color-navigation: #1b1b1b 91%;
 
-    color: var(--color-secondary2);
+    color: var(--color-primary3);
 
     --font-weight-400: 400;
     --font-weight-500: 500;
@@ -45,18 +48,39 @@
 
   body {
     list-style: none;
-    background-color: var(--color-secondary02);
+    background-color: var(--color-secondary2);
     font-size: var(--step-0);
   }
 
+  header,
+  footer,
   main {
-    /* background-color: var(--color_black); */
-    /* max-width: 1600px; */
-    /* margin: auto; */
-    /* display: grid;
-    grid-template-columns: var(--layout-grid); */
+    grid-column: full;
+    display: grid;
+    grid-template-columns: subgrid;
+
+    > * {
+      grid-column: content;
+    }
   }
-  section {
+
+  .full-bleed {
+    grid-column: full;
+    display: grid;
+    grid-template-columns: subgrid;
+
+    > * {
+      grid-column: content;
+    }
+  }
+  /* main {
+    background-color: var(--color_black);
+    max-width: 1600px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: var(--layout-grid);
+  } */
+  /* section {
     padding: 5rem;
   }
 
@@ -64,7 +88,7 @@
     section {
       padding: 1rem;
     }
-  }
+  } */
 
   h1,
   h2,
@@ -73,7 +97,7 @@
   h5,
   h6 {
     font-family: "Cabin", sans-serif;
-    color: var(--color-primary03);
+    /* color: var(--color-primary3); */
     font-weight: var(--font-weight-600);
     line-height: 1.3;
   }
@@ -85,7 +109,7 @@
   p,
   a,
   li {
-    color: var(--color-secondary02);
+    /* color: var(--color-secondary2); */
     font-weight: var(--font-weight-400);
   }
 
