--- a/src/components/CorevaluesSection.astro
+++ b/src/components/CorevaluesSection.astro
@@ -79,8 +79,8 @@ const { title, subtitle, button, values, link, text } = data;
           color: var(--color-primary3);
         }
       }
-      img {
-        width: 10%;
+      svg {
+        width: 53px;
       }
     }
 
