--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,7 +12,7 @@ import Popover from "../components/Popover.astro";
       <hr />
       <li><a href="/">Home</a></li>
       <hr />
-      <li><a href="/casestudy">Case Stude</a></li>
+      <li><a href="/casestudy">Case Study</a></li>
       <hr />
       <li><a href="/team">Team</a></li>
       <hr />
