--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -50,7 +50,7 @@ const { title = "opgave" } = Astro.props;
     <main>
       <slot />
 
-      <Newsletter />
+      <!-- <Newsletter /> -->
     </main>
 
     <Footer />
