--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import HeroSection from "../components/HeroSection.astro";
 import AndenSection from "../components/AndenSection.astro";
 import Button from "../components/Button.astro";
 import Card from "../components/Card.astro";
@@ -24,30 +25,13 @@ const corevalueData = await fetch("https://raw.githubusercontent.com/espi0001/fr
 ---
 
 <MainLayout title="Home">
-  <section class="hero">
-    <article class="tekst-knap">
-      <h1>Adam Buschemia Business Consultant</h1>
-      <p>Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.</p>
-      <Button style="secondary" linket="#">Book a meeting</Button>
-    </article>
-    <Image alt="" src={sarah} />
-  </section>
+  <HeroSection />
 
-  <section class="who-we-are">
-    <Card style="primary" buttonProps={{ style: "primary" }} h6="Finance & Restructuring" tekst="Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.">Our Services</Card>
-    <Card style="primary" buttonProps={{ style: "primary" }} h6="Our Approach" tekst="Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.">More About</Card>
-    <Card style="primary" buttonProps={{ style: "primary" }} h6="Our Approach" tekst="Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.">Explore Our Solution</Card>
-  </section>
   <AndenSection imageProps={{ imageProps: "case2" }} tagProps={{ style: "secondary" }} h2="What To Expect" tekst="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." li1="Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day." li2="Capitalize on low hanging fruit to identify a ballpark value added activity to beta test override the digital.">WE'LL WORK WITH YOU</AndenSection>
 
-  <section class="services">
-    <!-- <div class="teksten">
-      <h2>Financial Projections</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div> -->
-    <ScrollingContainer cardContent={cardContent} />
-  </section>
-  <section class="experience">
+  <ScrollingContainer cardContent={cardContent} />
+
+  <!-- <section class="experience">
     <div class="teksten">
       <Tag style="tertiary">Experience</Tag>
       <h2>More than 25 years of experience</h2>
@@ -56,16 +40,15 @@ const corevalueData = await fetch("https://raw.githubusercontent.com/espi0001/fr
     <div class="animationen">
       <Animation />
     </div>
-  </section>
+  </section> -->
 
-  <section class="core">
+  <!-- <section class="core">
     <Tag style="secondary">Growing with our Clients</Tag>
-    <!-- 
-    <Overskrift farve="secondary" linket="#" buttonProps={{ style: "secondary" }} h2="Our core values & principles" tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps.">Get in touch</Overskrift> -->
-    <CorevaluesSection data={corevalueData} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }} />
-  </section>
 
-  <section class="sidste">
+    <CorevaluesSection data={corevalueData} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }} />
+  </section> -->
+
+  <!-- <section class="sidste">
     <article class="del1">
       <Tag style="secondary">Proccess</Tag>
       <h2>Contact Us. It’s Easy.</h2>
@@ -84,42 +67,9 @@ const corevalueData = await fetch("https://raw.githubusercontent.com/espi0001/fr
         </div>
       </div>
     </figure>
-  </section>
+  </section> -->
 </MainLayout>
 <style>
-  .hero {
-    background-color: var(--color-primary3);
-    color: var(--color-secondary2);
-    /* grid-column: content; */
-    display: flex;
-
-    align-items: center;
-    justify-content: center;
-    gap: 32px;
-
-    img {
-      width: 100%;
-      max-width: 600px;
-    }
-  }
-
-  .tekst-knap {
-    display: inline-flex;
-    flex-direction: column;
-  }
-
-  h1 {
-    font-weight: var(--font-weight-700);
-    margin-bottom: 32px;
-  }
-
-  .who-we-are {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    grid-column: content;
-  }
-
   .title {
     padding-left: 12px;
     padding-right: 12px;
