--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,13 +5,20 @@
 
 @layer global {
   :root {
-    --step-0: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
+    /* --step-0: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
     --step-1: clamp(1.25rem, 1.1632rem + 0.4341vw, 1.4996rem);
     --step-2: clamp(1.5625rem, 1.4107rem + 0.7591vw, 1.999rem);
     --step-3: clamp(1.9531rem, 1.7056rem + 1.2375vw, 2.6647rem);
     --step-4: clamp(2.4414rem, 2.0551rem + 1.9315vw, 3.552rem);
     --step-5: clamp(3.0518rem, 2.4663rem + 2.9271vw, 4.7348rem);
-    --step-6: clamp(3.8147rem, 2.9462rem + 4.3423vw, 6.3115rem);
+    --step-6: clamp(3.8147rem, 2.9462rem + 4.3423vw, 6.3115rem); */
+
+    --font-35-50: clamp(2.1875rem, 1.8614rem + 1.6304vw, 3.125rem);
+    --font-30-45: clamp(1.875rem, 1.5489rem + 1.6304vw, 2.8125rem);
+    --font-25-40: clamp(1.5625rem, 1.2364rem + 1.6304vw, 2.5rem);
+    --font-20-35: clamp(1.25rem, 0.9239rem + 1.6304vw, 2.1875rem);
+    --font-20-30: clamp(1.25rem, 1.0326rem + 1.087vw, 1.875rem);
+    --font-20-25: clamp(1.25rem, 1.1413rem + 0.5435vw, 1.5625rem);
 
     --color-primary1: #ffcc4a;
     --color-primary2: #4eaf4e;
@@ -41,6 +48,9 @@
     --square-pattern: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="red"><path d="M7.47662 4.02206C6.50635 3.05178 5.53232 2.07774 4.56205 1.10745C4.28482 0.83023 3.80905 0.83023 3.53183 1.10745C2.56155 2.07774 1.59128 3.04803 0.621002 4.02206C0.343781 4.29929 0.343781 4.77506 0.621002 5.05229C1.59128 6.02258 2.5653 6.99661 3.53558 7.9669C3.8128 8.24412 4.28857 8.24412 4.56579 7.9669C5.53607 6.99661 6.51009 6.02258 7.48037 5.05229C7.63022 4.90244 7.69016 4.73011 7.69016 4.56527C7.69016 4.55403 7.69016 4.54654 7.69016 4.5353C7.69016 4.52781 7.69016 4.51657 7.69016 4.50908C7.69016 4.34424 7.63022 4.17191 7.47662 4.02206ZM4.04881 6.41968C3.41944 5.79031 2.79382 5.16468 2.16445 4.5353C2.79382 3.90593 3.41944 3.2803 4.04881 2.65092C4.67818 3.2803 5.3038 3.90593 5.93317 4.5353C5.3038 5.16468 4.67818 5.79031 4.04881 6.41968Z"/></svg>');
 
     --layout-grid: [full-start] 1fr [content] minmax(0, 1200px) 1fr [full-end];
+    --gap: clamp(1rem, 6vw, 3rem);
+    --full: minmax(var(--gap), 1fr);
+    --content: min(75rem, 100% - var(--gap) * 2);
   }
 
   body {
@@ -50,15 +60,17 @@
   }
 
   main {
+    display: grid;
+    grid-template-columns: var(--layout-grid);
     /* background-color: var(--color_black); */
     /* max-width: 1600px; */
     /* margin: auto; */
     /* display: grid;
     grid-template-columns: var(--layout-grid); */
   }
-  section {
-    padding: 5rem;
-  }
+  /* section {
+    padding-inline: 5rem;
+  } */
 
   h1,
   h2,
@@ -72,10 +84,6 @@
     line-height: 1.3;
   }
 
-  h1 {
-    font-size: 3.125rem;
-  }
-
   p,
   a,
   li {
@@ -83,23 +91,27 @@
     font-weight: var(--font-weight-400);
   }
 
+  p {
+    font-size: 1rem;
+    max-width: 65ch;
+  }
   h1 {
-    font-size: var(--step-6);
+    font-size: var(--font-35-50);
   }
   h2 {
-    font-size: var(--step-5);
+    font-size: var(--font-30-45);
   }
   h3 {
-    font-size: var(--step-4);
+    font-size: var(--font-25-40);
   }
   h4 {
-    font-size: var(--step-3);
+    font-size: var(--font-20-35);
   }
   h5 {
-    font-size: var(--step-2);
+    font-size: var(--font-20-30);
   }
   h6 {
-    font-size: var(--step-1);
+    font-size: var(--font-20-25);
   }
 
   a {
