--- a/src/components/AndenSection.astro
+++ b/src/components/AndenSection.astro
@@ -6,56 +6,78 @@ import Tag from "./Tag.astro";
 const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
 ---
 
-<section class="hero-section">
-  <figure class={order}>
-    <!-- <Image {...imageProps} /> -->
-  </figure>
-  <Image alt="" src={home1} />
-  <article>
-    <Tag {...tagProps}><slot /></Tag>
-
-    <div class="content">
-      <div>
-        <h2>{h2}</h2>
-        <p>{tekst}</p>
-      </div>
-      <ul>
-        <li>{li1}</li>
-        <li>{li2}</li>
-      </ul>
+<section class="container">
+  <div class="del1">
+    <figure class={order}>
+      <Image alt="" src={home1} />
+    </figure>
+    <!-- <Image alt="" src={home1} /> -->
+  </div>
+  <div class="del2">
+    <div>
+      <Tag {...tagProps}><slot /></Tag>
+      <h2>{h2}</h2>
+      <p>{tekst}</p>
     </div>
-  </article>
+    <ul>
+      <li>{li1}</li>
+      <li>{li2}</li>
+    </ul>
+  </div>
 </section>
 
 <style>
   @layer components {
-    .hero-section {
+    .container {
       grid-column: full;
       display: grid;
       grid-template-columns: [full-start] 1fr [content] minmax(0, 600px) minmax(0, 600px) 1fr [full-end];
       grid-template-rows: 1fr auto auto;
-      max-height: 90vh;
-      overflow: hidden;
       gap: 2rem;
-
       color: var(--color-primary3);
+      padding: 5rem 0;
 
-      figure {
+      .del1 {
         grid-column: 2 / 3;
-        grid-row: 1 / 3;
+        grid-row: 2 / 3;
         display: grid;
         grid-template-columns: subgrid;
-        display: none;
       }
-      img {
+      /* img {
         display: grid;
         grid-template-columns: subgrid;
         grid-column: 2 / 3;
         grid-row: 2 / 3;
-      }
-      article {
-        grid-column: 3 / -1;
-        grid-row: 1 / -2;
+      } */
+      .del2 {
+        grid-column: 3;
+        grid-row: 1 / 3;
+
+        div {
+          display: flex;
+          flex-direction: column;
+        }
+
+        ul {
+          display: grid;
+          gap: 1rem;
+          margin-top: 1.5rem;
+          li {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            align-items: center;
+            gap: 1rem;
+            font-size: 1rem;
+            color: #595566;
+            max-width: 65ch;
+            &:before {
+              content: "";
+              width: 1.6rem;
+              aspect-ratio: 1;
+              background: var(--checkmark-icon) 50% 50% / contain no-repeat;
+            }
+          }
+        }
       }
     }
 
@@ -65,27 +87,6 @@ const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
 
     [data-icon="balance"] {
       width: 24px;
-    }
-
-    ul {
-      display: grid;
-      gap: 1rem;
-    }
-
-    li {
-      display: grid;
-      grid-template-columns: auto 1fr;
-      align-items: center;
-      gap: 1rem;
-      font-size: 1rem;
-      color: #595566;
-    }
-
-    li:before {
-      content: "";
-      width: 1.6rem;
-      aspect-ratio: 1;
-      background: var(--checkmark-icon) 50% 50% / contain no-repeat;
     }
   }
 </style>
