--- a/src/components/CorevaluesSection.astro
+++ b/src/components/CorevaluesSection.astro
@@ -1,45 +1,132 @@
 ---
 import CorevaluesCard from "./CorevaluesCard.astro";
 import Button from "./Button.astro";
+import Tag from "./Tag.astro";
 import { Icon } from "astro-icon/components";
 
 const { data } = Astro.props;
-const { buttonProps1 } = Astro.props;
+const { buttonProps1, tagProps } = Astro.props;
 const { title, subtitle, button, values, link, text } = data;
 // console.log(data);
 ---
 
 <section>
-  <article class="full">
+  <div class="del1">
+    <Tag {...tagProps}><slot /></Tag>
     <h2>{title}</h2>
     <div class="teksten">
       <p>{subtitle}</p>
-      <!-- <a href={button.link}>
-        <button>{button.text}</button>
-      </a> -->
       <Button {...buttonProps1} linket={button.link}>{button.text}</Button>
     </div>
-    <!-- {values.map((corevalue) => <CorevaluesCard {corevalue} />)} -->
+  </div>
 
-    <ul role="list">
-      {
-        values.map((corevalue) => (
-          <li>
-            <Icon name={corevalue.icon} />
+  <ul role="list" class="del2">
+    {
+      values.map((corevalue) => (
+        <li>
+          <Icon name={corevalue.icon} />
 
-            <h5>{corevalue.title}</h5>
-            <p>{corevalue.description}</p>
-            <a href={corevalue.link.url}>{corevalue.link.text}</a>
-          </li>
-        ))
-      }
-    </ul>
-  </article>
+          <h5>{corevalue.title}</h5>
+          <p>{corevalue.description}</p>
+          <a href={corevalue.link.url}>{corevalue.link.text}</a>
+        </li>
+      ))
+    }
+  </ul>
 </section>
 
 <style>
   @layer components {
-    a {
+    section {
+      grid-column: 1 / -1;
+      display: grid;
+      grid-template-columns: inherit;
+      row-gap: 2rem;
+      background: var(--color-primary3);
+      color: var(--color-secondary2);
+      padding: 5rem 0;
+      @media (width < 600px) {
+        display: block;
+      }
+      > * {
+        grid-column: 2;
+      }
+
+      > ul {
+        scroll-snap-type: x mandatory;
+        grid-column: 1 / -1;
+        padding-inline: max(1rem, 50% - var(--content) / 10px);
+        padding-block-end: 1rem;
+
+        li {
+          scroll-snap-align: center;
+          &:first-child {
+            margin-left: calc(50% - var(--content) / 2);
+          }
+
+          &:last-child {
+            margin-right: calc(50% - var(--content) / 2);
+          }
+        }
+      }
+      .del1 {
+        display: flex;
+        flex-direction: column;
+        .text {
+          max-width: 50%;
+          .icon {
+            width: 100px;
+          }
+        }
+        .teksten {
+          display: flex;
+          justify-content: space-between;
+
+          @media (width < 600px) {
+            flex-direction: column;
+          }
+        }
+      }
+      .del2 {
+        display: flex;
+        justify-content: space-between;
+        /* gap: 2.25rem; */
+        overflow-x: auto;
+        list-style: none;
+        margin-top: 0;
+
+        @media (width < 600px) {
+          flex-direction: column;
+        }
+
+        li {
+          flex-basis: min(272px, 90%);
+          flex-shrink: 0;
+          background: #ebebeb;
+          color: #595566;
+          border-radius: 8px;
+          font-size: 1rem;
+          padding: 2.75rem 2.1875rem;
+          align-self: start;
+          display: grid;
+          gap: 10px;
+          h6 {
+            font-weight: 700;
+            font-size: 1.5625rem;
+          }
+
+          svg {
+            width: 53px;
+          }
+        }
+        .icon-card {
+          width: 40px;
+          margin-bottom: 14px;
+        }
+      }
+    }
+
+    /* a {
       color: var(--color-primary3);
       align-self: end;
       &:hover {
@@ -95,6 +182,6 @@ const { title, subtitle, button, values, link, text } = data;
       p {
         max-inline-size: 67ch;
       }
-    }
+    } */
   }
 </style>
