--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,27 +2,12 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import HeroSection from "../components/HeroSection.astro";
 import AndenSection from "../components/AndenSection.astro";
-import Experience from "../components/Experience.astro";
-import Button from "../components/Button.astro";
-import Card from "../components/Card.astro";
 import ScrollingContainer from "../components/ScrollingContainer.astro";
-import { cardContent } from "../data/card-content.js";
-import Tag from "../components/Tag.astro";
-import { Icon } from "astro-icon/components";
-import { Image } from "astro:assets";
-import sarah from "../assets/images/sarah.jpg";
-import home1 from "../assets/home1.jpg";
-import home2 from "../assets/home2.jpg";
-import home3 from "../assets/home3.jpg";
-import home4 from "../assets/home4.jpg";
-import Overskrift from "../components/Overskrift.astro";
-import ContactInfo from "../components/ContactInfo.astro";
-
-import Animation from "../components/Animation.astro";
-
+import Experience from "../components/Experience.astro";
 import CorevaluesSection from "../components/CorevaluesSection.astro";
-
+import { cardContent } from "../data/card-content.js";
 const corevalueData = await fetch("https://raw.githubusercontent.com/espi0001/frontend-design/main/resources/json/corevalues.json").then((res) => res.json());
+import ContactUs from "../components/ContactUs.astro";
 ---
 
 <MainLayout title="Home">
@@ -34,92 +19,8 @@ const corevalueData = await fetch("https://raw.githubusercontent.com/espi0001/fr
 
   <Experience />
 
-  <!-- <section class="core">
-    <Tag style="secondary">Growing with our Clients</Tag>
+  <CorevaluesSection data={corevalueData} tagProps={{ style: "tertiary" }} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }}>Growing with our Clients</CorevaluesSection>
 
-    <CorevaluesSection data={corevalueData} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }} />
-  </section> -->
-
-  <!-- <section class="sidste">
-    <article class="del1">
-      <Tag style="secondary">Proccess</Tag>
-      <h2>Contact Us. It’s Easy.</h2>
-      <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative.</p>
-
-      <ContactInfo iconname="call-today" tekst="Call Today" h6="+1 800 100 900" />
-      <ContactInfo iconname="monday-friday" tekst="Monday To Friday" h6="9AM - 5PM" />
-      <ContactInfo iconname="adress-grey" tekst="USA Office" h6="195 Devonshire St Boston, MA 02110" />
-    </article>
-    <figure>
-      <div class="billede-grid">
-        <Image alt="" src={home2} />
-        <div>
-          <Image alt="" src={home3} />
-          <Image alt="" src={home4} />
-        </div>
-      </div>
-    </figure>
-  </section> -->
+  <ContactUs />
 </MainLayout>
-<style>
-  .services {
-    margin: 0;
-    /* scroll-snap-align: center; */
-    scroll-snap-stop: always;
-    display: flex;
-    flex-direction: column;
-    place-content: center;
-    align-items: center;
-    gap: var(--content-gap);
-    color: var(--color-primary3);
-    background: var(--color-secondary1);
-
-    > * {
-      /* max-width: var(--content-width); */
-    }
-    h2 {
-      font-weight: var(--font-weight-700);
-    }
-  }
-  .core {
-    background: var(--color-primary3);
-    display: flex;
-    flex-direction: column;
-  }
-
-  .teksten2 {
-    display: flex;
-  }
-  .sidste {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    color: var(--color-primary3);
-    gap: 69px;
-    .del1 {
-      display: flex;
-      flex-direction: column;
-    }
-  }
-
-  .icons {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-
-    svg {
-      width: 52px;
-    }
-  }
-
-  .billede-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-
-    :last-child {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-  }
-</style>
+<style></style>
