--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import HeroBackground from "../components/HeroBackground.astro";
 import AndenSection from "../components/AndenSection.astro";
 import Accordion from "../components/Accordion.astro";
 import Tag from "../components/Tag.astro";
@@ -19,9 +20,8 @@ const employeeData = await fetch("https://raw.githubusercontent.com/espi0001/fro
 ---
 
 <MainLayout title="About">
-  <Hero baggrund="baggrund1" h1="Creative Services For Boost Your Business Growth">Services</Hero>
-
-  <section>
+  <HeroBackground surface="about" tag="SERVICE" headline="Creative Services For Boost Your Business Growth" />
+  <!-- <section>
     <AndenSection order="order" imageProps={{ imageProps: "case2" }} tagProps={{ style: "primary" }} h2="Turn your ideas into reality." tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps." li1="Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day." li2="Capitalize on low hanging fruit to identify a ballpark value added activity to beta test override the digital.">About Us</AndenSection>
     <dl>
       <div>
@@ -45,8 +45,7 @@ const employeeData = await fetch("https://raw.githubusercontent.com/espi0001/fro
 
   <section class="core">
     <Tag style="secondary">Growing with our Clients</Tag>
-    <!-- 
-    <Overskrift farve="secondary" linket="#" buttonProps={{ style: "secondary" }} h2="Our core values & principles" tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps.">Get in touch</Overskrift> -->
+
     <CorevaluesSection data={corevalueData} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }} />
   </section>
 
@@ -78,7 +77,7 @@ const employeeData = await fetch("https://raw.githubusercontent.com/espi0001/fro
         <Accordion overskrift1="Can I get a free trial before I purchase?" />
       </div>
     </article>
-  </section>
+  </section> -->
 </MainLayout>
 <style>
   dl {
