--- a/src/pages/casestudy.astro
+++ b/src/pages/casestudy.astro
@@ -5,12 +5,15 @@ import Hero from "../components/Hero.astro";
 import { Image } from "astro:assets";
 import case2 from "../assets/case2.jpg";
 import about1 from "../assets/about1.avif";
+
+import HeroBackground from "../components/HeroBackground.astro";
 ---
 
 <MainLayout title="Case Study">
-  <Hero baggrund="baggrund3" h1="Taxes & Efficiency">Case Studies single</Hero>
+  <!-- <Hero baggrund="baggrund3" h1="Taxes & Efficiency">Case Studies single</Hero> -->
 
-  <section>
+  <HeroBackground surface="case" tag="CASE STUDIES SINGLE" headline="Taxes & Efficiency" />
+  <!-- <section>
     <article>
       <Image alt="" src={about1} />
       <h3>Project Overview</h3>
@@ -33,7 +36,7 @@ import about1 from "../assets/about1.avif";
       <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service. Objectively innovate empowered manufactured products whereas parallel platforms. Holistically predominate extensible testing procedures for reliable supply chains.</p>
       <p>Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products completely pursue scalable customer service.</p>
     </article>
-  </section>
+  </section> -->
 </MainLayout>
 
 <style>
