--- a/src/pages/casestudy.astro
+++ b/src/pages/casestudy.astro
@@ -1,18 +1,16 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Hero from "../components/Hero.astro";
-
-import { Image } from "astro:assets";
-import case2 from "../assets/case2.jpg";
-import about1 from "../assets/about1.avif";
-
 import HeroBackground from "../components/HeroBackground.astro";
+
+import CaseStudy1 from "../components/CaseStudy1.astro";
+
+import about1 from "../assets/about1.avif";
 ---
 
 <MainLayout title="Case Study">
-  <!-- <Hero baggrund="baggrund3" h1="Taxes & Efficiency">Case Studies single</Hero> -->
-
   <HeroBackground surface="case" tag="CASE STUDIES SINGLE" headline="Taxes & Efficiency" />
+
+  <CaseStudy1 />
   <!-- <section>
     <article>
       <Image alt="" src={about1} />
