--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -46,14 +46,6 @@ import Popover from "../components/Popover.astro";
       /* position: absolute; */
       z-index: 1;
     }
-
-    /* .logo {
-    display: inline-flex;
-    z-index: 5;
-    justify-content: flex-start; 
-    align-items: center; 
-    gap: 11px; 
-  } */
     .logo {
       a {
         font-family: "Cabin", sans-serif;
@@ -75,7 +67,6 @@ import Popover from "../components/Popover.astro";
       gap: 30px;
       display: inline-flex;
       justify-content: flex-start;
-
       list-style: none;
       /* margin: 0;
     padding: 0; */
@@ -93,8 +84,8 @@ import Popover from "../components/Popover.astro";
     .menu a {
       display: block;
       padding: 10px;
-      /* color: var(--color-secondary02);
-    font-size: var(--font_size_medium); */
+      color: var(--color-secondary2);
+
       text-decoration: none;
       transition: color 0.3s;
       text-align: end;
@@ -116,7 +107,7 @@ import Popover from "../components/Popover.astro";
     .burger .line {
       width: 100%;
       height: 2px;
-      /* background-color: var(--color_white); */
+      background-color: var(--color_white);
       margin-bottom: 5px;
       transition: 0.2s linear;
     }
@@ -157,7 +148,7 @@ import Popover from "../components/Popover.astro";
 
       nav.active .menu {
         display: block;
-        /* background-color: var(--color_black); */
+        background: var(--color-navigation);
         position: absolute;
         top: 0px;
         left: 0;
@@ -178,7 +169,7 @@ import Popover from "../components/Popover.astro";
       }
       hr {
         display: block;
-        /* border-image: var(--color_black) 1; */
+        border-image: var(--color-secondary2) 1;
       }
       .logo img {
         width: 55px;
@@ -199,7 +190,6 @@ import Popover from "../components/Popover.astro";
       }
 
       nav.active .menu a {
-        /* font-size: var(--font_size_medium); */
         text-align: start;
       }
       .logo img {
